add : index.html

--- a/views/login.html
+++ b/views/login.html
@@ -58,9 +58,14 @@
                 <div class="img">
                   <img class="logofooter2" src="../assets/images/logo.png" alt="Logo" />
                 </div>
-                <div class="description2">Plan and book your perfect trip with expert advice, travel tips for vehicle
-                  information
-                  from us</div>
+                <div class="descripton2">
+                  <p>
+                    Plan and book your perfect trip with expert
+                    advice, travel tips for vehicle
+                    information
+                    from us
+                  </p>
+                </div>
                 <div>©2020 Vehicle Rental Center. All rights reserved</div>
 
                 <div class="link-social">
