--- a/assets/style.css
+++ b/assets/style.css
@@ -158,7 +158,7 @@ footer.footer .link-social i {
 }
 
 .header-login .header-content .header-right form div input {
-  background: rgba(255, 255, 255, 0.26);
+  background: rgba(255, 255, 255, 0.5);
   width: 489px;
   height: 79px;
   border: none;
@@ -171,7 +171,7 @@ footer.footer .link-social i {
 }
 
 .header-login .header-content .header-right form div input::placeholder {
-  color: white;
+  color: #BF9270;;
   font-size: 24px;
   padding-left: 41px;
 }
@@ -221,11 +221,6 @@ footer.footer .link-social i {
   border: none;
 }
 
-.header-login .header-content .header-right form div button.btn-google i {
-  width: 34px;
-  height: 33px;
-  margin-right: 12px;
-}
 
 /***** Garis Login *****/
 
@@ -252,14 +247,13 @@ footer.footer .link-social i {
 	margin: 0px 8px;
 }
 
-.footer2 .description2 {
+.description2 p{
   margin-top: 26px;
   margin-bottom: 53px;
-  width: 300px;
   color: #393939;
   text-align: center;
+  margin-left: 300px;
 }
-
 .footer2 .link-social {
   border-top: 1px solid #C4C4C4;
   padding: 31px;
@@ -280,6 +274,31 @@ footer.footer .link-social i {
   text-align: left;
   color: #393939;
 }
+nav.navbar button.btn-login{
+  border: 2px solid #BF9270;
+  background-color: white;
+  color: #BF9270;
+  font-size: 15px;
+  font-weight: 400;
+  width: 132px;
+  height: 44px;
+  border-radius: 10px;
+  margin-right: 18px;
+}
+
+nav.navbar button.btn-register{
+  background-color: #BF9270;
+  border-color: #BF9270 solid;
+  color: #FFEDDB;
+  font-size: 15px;
+  font-weight: 400;
+  width: 132px;
+  height: 44px;
+  border-radius: 10px;
+  border: none;
+  margin-right:98px;
+}
+
 @media (max-width: 500px) {
   .header-forgot .header-content {
     padding: 0 10px;
