--- a/views/index.html
+++ b/views/index.html
@@ -11,6 +11,10 @@
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <!--Custom CSS-->
   <link rel="stylesheet" href="../assets/style.css">
+  <!--Font Awesome-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+    integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -52,9 +56,196 @@
     <button type="button" class="btn-register btn btn-info">Register</button>
   </nav>
   <!--END NAVBAR-->
+  <!--START  HEADER-->
+  <header class="header-home">
+    <div class="header-content">
+      <h1>Explore and Travel</h1>
+      <div>
+        <p>Vehicle Finder</p>
+      </div>
+      <div>
+        <span class="border-top border-2"></span>
+      </div>
+      <div class="btn-group">
+        <button type="button" class=" btn  " aria-expanded="false">
+          Type the vehicle (ex. motorbike
+        </button>
+      </div>
+      <div class="row">
+        <div class="col-md-2">
+          <div class="btn-group">
+            <button type="button" class="  btn dropdown-toggle  " data-bs-toggle="dropdown" aria-expanded="false">
+              Location
+            </button>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Action</a></li>
+              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><a class="dropdown-item" href="#">Something else here</a></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li><a class="dropdown-item" href="#">Separated link</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-md-2">
+          <div class="btn-group">
+            <button type="button" class="btn dropdown-toggle  " data-bs-toggle="dropdown" aria-expanded="false">
+              Date
+            </button>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Action</a></li>
+              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><a class="dropdown-item" href="#">Something else here</a></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li><a class="dropdown-item" href="#">Separated link</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="">
+        <button type="button" class=" search-vehicles btn  " aria-expanded="false">
+          Search
+        </button>
+      </div>
+    </div>
+  </header>
+  <!--END HEADER-->
 
+  <!--START BODY-->
 
-  
+  <div class="main">
+    <div class="popular">
+      <h2><b> Popular in town</b></h2>
+      <div class="row">
+        <div class="col">
+          <div class="img1">
+            <img src="../assets/images/img3-home.png" class="float-start rounded">
+            <form class="text-img1">
+              <button type="submit" class="btn head">Merapi</button>
+              <button type="submit" class="btn">Yogyakarta</button>
+            </form>
+          </div>
+        </div>
+        <div class="col">
+          <div class="img1">
+            <img src="../assets/images/img2-home.png" class="float-start rounded">
+            <form class="text-img1">
+              <button type="submit" class="btn head">Teluk Bogam</button>
+              <button type="submit" class="btn">Kalimantan</button>
+            </form>
+          </div>
+        </div>
+        <div class="col">
+          <div class="img1 ">
+            <img src="../assets/images/img1-home.png" class="float-start rounded">
+            <form class="text-img1">
+              <button type="submit" class="btn head">Bromo</button>
+              <button type="submit" class="btn">Malang</button>
+            </form>
+          </div>
+        </div>
+        <div class="col">
+          <div class="img1">
+            <img src="../assets/images/img4-home.png" class="float-start rounded">
+            <form class="text-img1">
+              <button type="submit" class="btn head">Malioboro</button>
+              <button type="submit" class="btn">Yogyakarta</button>
+            </form>
+            <div class="next">
+              <i class="fa-solid fa-circle-chevron-right"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="popular">
+      <h2><b> Testimonials </b></h2>
+      <div class="row">
+        <div class="col">
+          <div class="testi-text-star">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+          </div>
+          <div class="testi-text">
+            ”It was the right decision to rent vehicle here, I spent less money and enjoy the trip. It was an amazing
+            experience to have a ride for wildlife trip!”
+          </div>
+          <h4>Edward Newgate</h4>
+          <h5>Founder Circle</h5>
+        </div>
+        <div class="col">
+          <div class="img1">
+            <img src="../assets/images/profil-edward.png" class="float-start rounded">
+            <form class="text-next">
+              <i class="fa-solid fa-circle-chevron-left"></i>
+              <i class="fa-solid fa-circle-chevron-right"></i>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!--END BODY-->
+
+  <!--START FOOTER-->
+  <footer class="footer">
+    <div class="row text">
+      <div class="col">
+        <div>
+          <img src="../assets/images/logo.png" alt="Logo" />
+        </div>
+        <div class="description">Plan and book your perfect trip with expert advice, travel tips for vehicle information
+          from us</div>
+        <div>©2020 Vehicle Rental Center. All rights reserved</div>
+      </div>
+      <div class="col-md-2">
+        <h5>Destination</h5>
+        <ul>
+          <li>Bali</li>
+          <li>Yogyakarta</li>
+          <li>Jakarta</li>
+          <li>Kalimantan</li>
+          <li>Malang</li>
+        </ul>
+      </div>
+      <div class="col-md-2">
+        <h5>Destination</h5>
+        <ul>
+          <li>Bali</li>
+          <li>Yogyakarta</li>
+          <li>Jakarta</li>
+          <li>Kalimantan</li>
+          <li>Malang</li>
+        </ul>
+      </div>
+      <div class="col-md-2">
+        <h5>Destination</h5>
+        <ul>
+          <li>Bali</li>
+          <li>Yogyakarta</li>
+          <li>Jakarta</li>
+          <li>Kalimantan</li>
+          <li>Malang</li>
+        </ul>
+      </div>
+    </div>
+    <div class="link-social">
+      <i class="fa-brands fa-twitter"></i>
+      <i class="fa-brands fa-facebook-f"></i>
+      <i class="fa-brands fa-instagram"></i>
+      <i class="fa-brands fa-linkedin-in"></i>
+      <i class="fa-brands fa-youtube"></i>
+    </div>
+  </footer>
+  <!--END FOOTER-->
 </body>
 
 </html>
