--- a/views/forgot-password.html
+++ b/views/forgot-password.html
@@ -31,8 +31,12 @@
     <div class="header-content">
       <div class="header-nav">
         <div>
-          <i class="fa-solid fa-chevron-left"></i>
-          <span>Back</span>
+          <a style="color: aliceblue;" href="../views/login.html" class="href">
+
+            <i class="fa-solid fa-chevron-left"></i>
+            <span>Back</span>
+          </a>
+
         </div>
       </div>
       <h1 class="heading">Don't worry, we got your back!</h1>
@@ -49,7 +53,7 @@
       </p>
     </div>
   </header>
-  <footer class="footer container">
+  <footer class="footer">
     <div class="row text">
       <div class="col">
         <div>
