--- a/views/index.html
+++ b/views/index.html
@@ -19,7 +19,7 @@
 
 <body>
   <!--NAVBAR-->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-light">
     <a class="navbar-brand" href="#">
       <img src="../assets/images/logo.png" alt="Avatar Logo" style="width:40px;margin-left: 136px; margin-right: 515px;"
         class="rounded-pill">
@@ -52,8 +52,8 @@
         </li>
       </ul>
     </div>
-    <button type="button" class="btn-login btn btn-info">Login</button>
-    <button type="button" class="btn-register btn btn-info">Register</button>
+    <a type="button" href="../views/login.html" class="btn-login btn btn-info"> Login</a>
+    <a type="button" class="btn-register btn btn-info">Register</a>
   </nav>
   <!--END NAVBAR-->
   <!--START  HEADER-->
