--- a/views/login.html
+++ b/views/login.html
@@ -30,6 +30,7 @@
         <div class="header-right col-md-6">
           <form>
             <h1>Login</h1>
+            <span>LET’S EXPLORE THE WORLD</span>
             <div>
               <div>
                 <input type="text" placeholder="Email" />
@@ -41,7 +42,7 @@
                 <button type="button" class="btn-login btn btn-info">Login</button>
               </div>
               <div>
-                <p class="forgot"><a href="forgot-password.html">Forgot password?</a></p>
+                <p class="forgot"><a class="text-light" href="forgot-password.html">Forgot password?</a></p>
               </div>
               <div>
                 <h2><span class="hr-sect">or try another way</span></h2>
@@ -53,6 +54,7 @@
               </div>
               <div>
                 <button type="button" class="btn-signup btn btn-info">Sign Up</button>
+                <p class="signupnow">Dont Have Account ? <a class="text-light" href="#">SignUp Now</a></p>
               </div>
               <div class="footer2 container">
                 <div class="img">
