--- a/views/login.html
+++ b/views/login.html
@@ -39,7 +39,8 @@
                 <input type="password" placeholder="Password" />
               </div>
               <div>
-                <button type="button" class="btn-login btn btn-info">Login</button>
+                <a href="../views/index-after-login.html"><button type="button"
+                    class="btn-login btn btn-info">Login</button></a>
               </div>
               <div>
                 <p class="forgot"><a class="text-light" href="forgot-password.html">Forgot password?</a></p>
