--- a/views/signup.html
+++ b/views/signup.html
@@ -57,7 +57,7 @@
               </div>
               <div>
                 <button type="button" class="btn-signup btn btn-info">Sign Up</button>
-                <p class="signupnow">Dont Have Account ? <a class="text-light" href="#">SignUp Now</a></p>
+                <p class="signupnow">Already Have an Account ? <a class="text-light" href="#">Login Now</a></p>
               </div>
               <div class="footer2 container">
                 <div class="img">
