--- a/assets/style.css
+++ b/assets/style.css
@@ -286,7 +286,13 @@ display: none;
   text-align: left;
   color: #393939;
 }
-nav.navbar a.btn-login{
+
+nav.navbar{
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+nav.navbar button.btn-login{
   border: 2px solid #BF9270;
   background-color:#FFEDDB;
   color: #BF9270;
@@ -297,9 +303,10 @@ nav.navbar a.btn-login{
   height: 44px;
   border-radius: 10px;
   margin-right: 18px;
+  
 }
 
-nav.navbar a.btn-register{
+nav.navbar button.btn-register{
   background-color: #BF9270;
   border-color: #BF9270 solid;
   color: #FFEDDB;
@@ -625,3 +632,30 @@ display: none;
       display: none;
     }
 }
+
+/***** Small devices (landscape phones, 576px and up) *****/
+
+
+@media (min-width: 576px) { 
+
+ }
+
+/***** Medium devices (tablets, 768px and up) *****/
+@media (min-width: 768px) { 
+  
+ }
+
+/***** Large devices (desktops, 992px and up) *****/
+@media (min-width: 992px) { 
+  
+ }
+
+/***** X-Large devices (large desktops, 1200px and up) *****/
+@media (min-width: 1200px) { 
+  
+ }
+
+/***** XX-Large devices (larger desktops, 1400px and up) *****/
+@media (min-width: 1400px) { 
+  
+ }
