--- a/views/index.html
+++ b/views/index.html
@@ -9,6 +9,9 @@
   <!--Bootstrap-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
   <!--Custom CSS-->
   <link rel="stylesheet" href="../assets/style.css">
   <!--Font Awesome-->
@@ -52,8 +55,8 @@
         </li>
       </ul>
     </div>
-    <a type="button" href="../views/login.html" class="btn-login btn btn-info"> Login</a>
-    <a type="button" class="btn-register btn btn-info">Register</a>
+    <a href="../views/login.html"><button type="button" class="btn-login btn btn-info"> Login</button></a>
+    <a href="../views/signup.html"><button type="button" class="btn-register btn btn-info">Register</button></a>
   </nav>
   <!--END NAVBAR-->
   <!--START  HEADER-->
