--- a/views/profil.html
+++ b/views/profil.html
@@ -108,7 +108,7 @@
       <div class="col-12">
         <div class="row">
           <form class="d-flex justify-content-between form-button-profile">
-            <a href="#"><button type="button" class="btn-profile-save btn "> Save Change </button></a>
+            <a href="#"><button type="button" class="btn-profile-save btn btn-sm btn-lg btn-md "> Save Change </button></a>
             <a href="#"><button type="button" class="btn-profile-edit-password btn "> Edit Password </button></a>
             <a href="#"><button type="button" class="btn-profile-cancel btn "> Cancel </button></a>
           </form>
