--- a/views/profil.html
+++ b/views/profil.html
@@ -36,8 +36,12 @@
       <div class="col-12">
         <h4 class="profile-text">Profile</h4>
       </div>
-      <div class="col-12 d-flex justify-content-center">
-        <img class="profil-image" src="../assets/images/iamge-profil-page.png" alt="">
+      <div class="col-12 d-flex justify-content-center mt-5">
+        <div class="position-relative">
+          <img class=" rounded-circle" src="../assets/images/iamge-profil-page.png" alt="">
+          <button class="rounded-circle bg-warning border-0 button-edit-profile"><i
+              class="fa-solid fa-pencil"></i></button>
+        </div>
       </div>
       <div class="col-12 d-flex justify-content-center">
         <h2 class="profile-name">
@@ -108,7 +112,8 @@
       <div class="col-12">
         <div class="row">
           <form class="d-flex justify-content-between form-button-profile">
-            <a href="#"><button type="button" class="btn-profile-save btn btn-sm btn-lg btn-md "> Save Change </button></a>
+            <a href="#"><button type="button" class="btn-profile-save btn btn-sm btn-lg btn-md "> Save Change
+              </button></a>
             <a href="#"><button type="button" class="btn-profile-edit-password btn "> Edit Password </button></a>
             <a href="#"><button type="button" class="btn-profile-cancel btn "> Cancel </button></a>
           </form>
@@ -144,7 +149,6 @@
     $('#datepicker').datepicker();
 
   });
-</script>
 </script>
 
 </html>
