--- a/assets/style.css
+++ b/assets/style.css
@@ -366,8 +366,9 @@ header.header-home .header-content span{
   padding-left: 33px;
 }
 
-header.header-home .header-content .btn-group{
-  margin-left:121px;
+
+.form-type-vehicle{
+  margin-left:83px;
   margin-top: 48px;
   margin-bottom: 34px;
   color: rgba(255, 255, 255, 0.5);
@@ -375,9 +376,17 @@ header.header-home .header-content .btn-group{
   border-radius: 6px;
   width: 476px;
 }
+.form-location-home{
+  margin-left:83px;
+  margin-top: 17px;
+  color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 6px;
+  width: 220px;
+}
 
-header.header-home .header-content .col-md-2 .btn-group{
-  margin-left:121px;
+.form-date-home{
+  margin-left:36px;
   margin-top: 17px;
   color: rgba(255, 255, 255, 0.5);
   background-color: rgba(255, 255, 255, 0.5);
@@ -386,7 +395,7 @@ header.header-home .header-content .col-md-2 .btn-group{
 }
 
 header.header-home .header-content .search-vehicles{
-  margin-left:121px;
+  margin-left:83px;
   margin-top: 51px;
   color: rgba(255, 255, 255, 0.5);
   background-color:#BF9270;
@@ -431,7 +440,13 @@ header.header-home .header-content .search-vehicles{
   border-radius: 10px;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
 }
-
+.button-edit-profile{
+  position: absolute;
+  right: 0px;
+  bottom: 0px;
+  width: 50px;
+  height: 50px;
+}
 .text-next{
   position: absolute;
   font-size: 40px;
@@ -558,12 +573,6 @@ nav{
   font-family: 'Nunito', sans-serif;
   font-weight: 700;
   margin-top: 100px;
-}
-.profil-image{
-  width: 200px;
-  height: 200px;
-  margin-top: 46px;
-  border-radius: 100%;
 }
 .profile-name{
   font-family: 'Playfair Display', serif;
