--- a/views/index.html
+++ b/views/index.html
@@ -30,59 +30,55 @@
   <!--NAVBAR-->
   <div id="navbar"></div>
   <!--END NAVBAR-->
+
   <!--START  HEADER-->
   <header class="header-home">
     <div class="header-content">
-      <h1>Explore and Travel</h1>
-      <div>
-        <p>Vehicle Finder</p>
-      </div>
-      <div>
-        <span class="border-top border-2"></span>
-      </div>
-      <div class="btn-group">
-        <button type="button" class=" btn  " aria-expanded="false">
-          Type the vehicle (ex. motorbike
-        </button>
-      </div>
-      <div class="row">
-        <div class="col-md-2">
-          <div class="btn-group">
-            <button type="button" class="  btn dropdown-toggle  " data-bs-toggle="dropdown" aria-expanded="false">
-              Location
-            </button>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-              <li>
-                <hr class="dropdown-divider">
-              </li>
-              <li><a class="dropdown-item" href="#">Separated link</a></li>
-            </ul>
+      <div class="row container">
+        <div class="col-12">
+          <h1>Explore and Travel</h1>
+        </div>
+        <div class="col-12">
+          <p>Vehicle Finder</p>
+        </div>
+        <div class="col-12">
+          <span class="border-top border-2"></span>
+        </div>
+        <div class="col-12">
+          <div class="m-4">
+            <form action="/examples/actions/confirmation.php" method="post">
+              <div class="col-12">
+                <div class="mb-3">
+                  <input type="email" class="form-type-vehicle form-control"
+                    placeholder="Type the vehicle (ex. motorbike">
+                </div>
+              </div>
+              <div class="col-12 d-flex">
+                <div class="col-3">
+                  <div class="mb-3">
+                    <select class="form-select form-location-home mx-9" aria-label="Default select example">
+                      <option selected>Location</option>
+                      <option value="Bekasi">Bekasi</option>
+                      <option value="Bandung">Bandung</option>
+                      <option value="Bogor">Bogor</option>
+                    </select>
+                  </div>
+                </div>
+                <div class="col-3">
+                  <div class="mb-3 ">
+                    <input id="datepicker" type="text" placeholder="Date"
+                      class="form-control form-select form-date-home me-auto">
+                  </div>
+                </div>
+              </div>
+              <div class="">
+                <button type="button" class=" search-vehicles btn  " aria-expanded="false">
+                  Search
+                </button>
+              </div>
+            </form>
           </div>
         </div>
-        <div class="col-md-2">
-          <div class="btn-group">
-            <button type="button" class="btn dropdown-toggle  " data-bs-toggle="dropdown" aria-expanded="false">
-              Date
-            </button>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-              <li>
-                <hr class="dropdown-divider">
-              </li>
-              <li><a class="dropdown-item" href="#">Separated link</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="">
-        <button type="button" class=" search-vehicles btn  " aria-expanded="false">
-          Search
-        </button>
       </div>
     </div>
   </header>
@@ -174,6 +170,7 @@
   <!--END FOOTER-->
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
 <script>
   $(document).ready(function () {
     $.get('../helpers/navbar.html', (res) => {
@@ -185,6 +182,10 @@
     $.get('../helpers/footer.html', (res) => {
       $('#footer').html(res)
     })
+  });
+  $(document).ready(function () {
+    $('#datepicker').datepicker();
+
   });
 </script>
 
