--- a/views/index.html
+++ b/views/index.html
@@ -90,7 +90,7 @@
     <div class="popular">
       <h2><b> Popular in town</b></h2>
       <div class="row">
-        <div class="col">
+        <div class="col-3">
           <div class="img1">
             <img src="../assets/images/img3-home.png" class="float-start rounded">
             <form class="text-img1">
@@ -99,7 +99,7 @@
             </form>
           </div>
         </div>
-        <div class="col">
+        <div class="col-3">
           <div class="img1">
             <img src="../assets/images/img2-home.png" class="float-start rounded">
             <form class="text-img1">
@@ -108,7 +108,7 @@
             </form>
           </div>
         </div>
-        <div class="col">
+        <div class="col-3">
           <div class="img1 ">
             <img src="../assets/images/img1-home.png" class="float-start rounded">
             <form class="text-img1">
@@ -117,7 +117,7 @@
             </form>
           </div>
         </div>
-        <div class="col">
+        <div class="col-3">
           <div class="img1">
             <img src="../assets/images/img4-home.png" class="float-start rounded">
             <form class="text-img1">
