--- a/views/index.html
+++ b/views/index.html
@@ -87,7 +87,7 @@
   <!--START BODY-->
 
   <div class="main">
-    <div class="popular">
+    <div class="popular container">
       <h2><b> Popular in town</b></h2>
       <div class="row">
         <div class="col-3">
@@ -134,7 +134,7 @@
 
     <div class="popular">
       <h2><b> Testimonials </b></h2>
-      <div class="row">
+      <div class="row container">
         <div class="col">
           <div class="testi-text-star">
             <i class="fa-solid fa-star"></i>
@@ -151,12 +151,14 @@
           <h5>Founder Circle</h5>
         </div>
         <div class="col">
-          <div class="img1">
-            <img src="../assets/images/profil-edward.png" class="float-start rounded">
-            <form class="text-next">
-              <i class="fa-solid fa-circle-chevron-left"></i>
-              <i class="fa-solid fa-circle-chevron-right"></i>
-            </form>
+          <div class="col-12 d-flex justify-content-center text-center mt-5">
+            <div class="position-relative">
+              <img class=" rounded" src="../assets/images/profil-edward.png" alt="">
+              <form class="text-next">
+                <i class="fa-solid fa-circle-chevron-left"></i>
+                <i class="fa-solid fa-circle-chevron-right"></i>
+              </form>
+            </div>
           </div>
         </div>
       </div>
