add : Vehicle Type

--- a/views/login.html
+++ b/views/login.html
@@ -27,13 +27,13 @@
 </head>
 
 <body>
-  <header class="header-login">
+  <header class="header-login vh-100">
     <div class="header-content">
-      <div class="row">
+      <div class="row h-100">
         <div class="header-left col-md-6">
         </div>
         <div class="header-right col-md-6">
-          <form>
+          <form class="h-100">
             <h1>Login</h1>
             <span>LET’S EXPLORE THE WORLD</span>
             <div>
