--- a/assets/style.css
+++ b/assets/style.css
@@ -646,6 +646,35 @@ nav{
   font-size: 24px;
   color: #BF9270;
 }
+input.search-type-name{
+ height: 52px;
+ width: 400px;
+ margin-right: 30px;
+ border-color:#9F9F9F;
+ background-color: rgba(255, 255, 255, 0.3);
+ border-radius: 10px;
+}
+.button-type-name{
+  height: 52px;
+  width: 1000px;
+  border-radius: 10px;
+ }
+.for-margin-search{
+  margin-top: 80px ;
+}
+.custom-control-input:checked~.custom-control-label::before {
+  color: #fff;
+  border-color: black;
+}
+
+.custom-control-input:checked~.custom-control-label.red::before {
+  background-color: red;
+}
+
+.custom-control-input:checked~.custom-control-label.green::before {
+  background-color: green;
+}
+
 @media (max-width: 500px) {
   .header-login .header-content .header-right {
     background-image: url(../assets/images/login-mobile.png);
