--- a/views/index.html
+++ b/views/index.html
@@ -56,8 +56,8 @@
               <div class="col-12 d-flex">
                 <div class="col-3">
                   <div class="mb-3">
-                    <select class="form-select form-location-home mx-9" aria-label="Default select example">
-                      <option selected>Location</option>
+                    <select class="form-select form-location-home mx-9">
+                      <option class="d-none">Location</option>
                       <option value="Bekasi">Bekasi</option>
                       <option value="Bandung">Bandung</option>
                       <option value="Bogor">Bogor</option>
