--- a/views/profil.html
+++ b/views/profil.html
@@ -57,13 +57,15 @@
       </div>
       <div class="col-12 profile-gender d-flex justify-content-center">
         <div class="form-check">
-          <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
+          <input class="form-check-input border-warning" type="radio" name="exampleRadios" id="exampleRadios1"
+            value="option1" checked>
           <label class="form-check-label" for="exampleRadios1">
             Male
           </label>
         </div>
         <div class="form-check">
-          <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
+          <input class="form-check-input border-warning" type="radio" name="exampleRadios" id="exampleRadios2"
+            value="option2">
           <label class="form-check-label" for="exampleRadios2">
             Female
           </label>
