--- a/assets/style.css
+++ b/assets/style.css
@@ -26,6 +26,21 @@ body {
   font-size: 30px;
   margin-right: 76px;
 }
+.reserv-back{
+  font-size: 30px;
+  margin-right: 76px;
+  color: black;
+  
+}
+.margin-reserv{
+  margin-top: 70px;
+  margin-bottom: 50px;
+}
+span.span-reserv{
+  font-size: 24px;
+  color: black;
+  text-decoration: none;
+}
 
 .header-forgot .header-content .header-nav span {
   font-size: 24px;
@@ -218,7 +233,17 @@ display: none;
   border-radius: 10px;
   border: none;
 }
-
+.btn-pay-now{
+  background-color: #BF9270;
+  color: #FFEDDB;
+  font-size: 24px;
+  font-weight: 900;
+  width: 990px;
+  height: 70px;
+  border-radius: 10px;
+  border: none;
+  margin-bottom: 50px;
+}
 .btn-detail-reserv{
   background-color:#FFCD61;
   color: #FFEDDB;
@@ -427,6 +452,16 @@ header.header-home .header-content span{
   background-color: rgba(255, 255, 255, 0.5);
   border-radius: 6px;
   width: 220px;
+}
+.reservation-date{
+  margin-top: 30px;
+}
+.form-date-reserv{
+  margin-top: 17px;
+  color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 6px;
+  width: 320px;
 }
 
 header.header-home .header-content .search-vehicles{
@@ -723,6 +758,12 @@ hr{
 .img-detail-vehicle{
   width: 470px;
   height: 370px;
+  margin-bottom: 30px;
+}
+
+.img-detail-vehicle2{
+  width: 696px;
+  height: 616px;
   margin-bottom: 30px;
 }
 .detail-left{
