--- a/views/reservation.html
+++ b/views/reservation.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vehicle Type</title>
+  <title>Reservation</title>
   <!--Bootstrap CDN-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.1/css/bootstrap.min.css"
     integrity="sha512-Ez0cGzNzHR1tYAv56860NLspgUGuQw16GiOOp/I2LuTmpSK9xDXlgJz3XN4cnpXWDmkNBKXR/VDMTCnAaEooxA=="
@@ -35,7 +35,7 @@
   <div class="container">
     <div class="row">
       <div class="margin-reserv">
-        <a style="color: aliceblue;" href="#" class="href">
+        <a href="#" class="href text-decoration-none">
           <i class="reserv-back fa-solid fa-chevron-left"></i>
           <span class="span-reserv">Reservation</span>
         </a>
@@ -49,7 +49,7 @@
       <div class="col-xl-6 detail-left">
         <img src="../assets/images/vehicle-detail.png" class="img-detail-vehicle1">
       </div>
-      <div class="col-xl-5">
+      <div class="col-xl-6">
         <div>
           <h2><b>Fixie - Gray Only </b> </h2>
           <h5 class="text-secondary"><b>Yogyakarta</b></h5><br>
@@ -64,8 +64,7 @@
           <div class="col-xl-12 reservation-date">
             <label for="Reservation"> Reservation Date : </label>
             <div class="mb-3 ">
-              <input id="datepicker" type="text" placeholder="Date"
-                class="form-control form-select form-date-reserv me-auto">
+              <input id="datepicker" type="text" placeholder="Date" class="form-control form-select form-date-reserv">
             </div>
             <div class="mb-3">
               <select class="form-select form-date-reserv mx-9">
