--- a/assets/style.css
+++ b/assets/style.css
@@ -511,9 +511,18 @@ header.header-home .header-content .search-vehicles{
   width: 129px;
   top : 250px;
   transform: translate(50%, 50%);
-  background-color: #EDCDBB;
+  background-color:#EDCDBB ;
   border-radius: 10px;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
+}
+
+.text-img-2{
+  position: absolute;
+  width: 129px;
+  bottom: 0px;
+  left: 0px;
+  background-color:#FFEDDB;
+  border-radius: 10px;
 }
 .button-edit-profile{
   position: absolute;
@@ -601,7 +610,7 @@ nav{
 
 .img-profile-login{
  margin-left: 40px;
- margin-right: 95px;
+ margin-right: 40px;
 }
 
 .carousel-caption{
@@ -859,6 +868,32 @@ hr{
 .btn-pay-before{
   background-color: #BF9270;
   border-color: #EDCDBB;
+}
+
+.filter-history{
+  color: #393939;
+}
+
+.ul-for-filter{
+  background-color: #EDCDBB;
+  color: #393939;
+}
+.cover-filter{
+  border: 1px solid;
+  width: 157px;
+  height: 45px;
+  text-align: center;
+}
+
+.button-type-name2{
+  width: 674px;
+  height: 45px;
+}
+
+.img-arrival{
+  width: 260.13px;
+  height: 340.35px;
+  margin-bottom: 20px;
 }
 
 @media (max-width: 500px) {
