--- a/assets/style.css
+++ b/assets/style.css
@@ -889,13 +889,40 @@ hr{
   width: 674px;
   height: 45px;
 }
-
+.bg-brown{
+  background-color: #BF9270;
+}
+.bg-brown-size{
+  width: 800px;
+  height: 50px;
+  border-radius: 10px;
+}
 .img-arrival{
   width: 260.13px;
   height: 340.35px;
   margin-bottom: 20px;
 }
 
+.for-text-history{
+  width: 674px;
+  height: 45px;
+}
+
+.for-check-history{
+  width: 157px;
+  height: 45px;
+  padding-left: 110px;
+}
+.for-img-history{
+  width: 197px;
+  height: 165px;
+}
+.width-img-history{
+  width: 150px;
+}
+.arrow-filter{
+  padding-left: 50px;
+}
 @media (max-width: 500px) {
   .header-login .header-content .header-right {
     background-image: url(../assets/images/login-mobile.png);
@@ -1011,6 +1038,27 @@ display: none;
     height: 30px;
     font-size: 12px;
   }
+  .btn-profile-save{
+    width: 120px;
+    height: 30px;
+    font-size: 12px;
+  }
+  .bg-brown-size{
+    width: 300px;
+    height: 40px;
+    border-radius: 10px;
+  }
+  .arrow-filter{
+    padding-left: 10px;
+  }
+  .for-medium-history-text{
+    padding-left: 30px;
+    font-size: 12px;
+  }
+  .for-img-history{
+    width: 140px;
+    height: 120px;
+  }
  }
  @media (min-width: 577px) and (max-width: 768px){
   footer.footer .row.text {
@@ -1032,6 +1080,22 @@ display: none;
     width: 120px;
     height: 30px;
     font-size: 12px;
+  }
+  .bg-brown-size{
+    width: 380px;
+    height: 40px;
+    border-radius: 10px;
+  }
+  .arrow-filter{
+    padding-left: 20px;
+  }
+  .for-medium-history-text{
+    padding-left: 50px;
+    font-size: 12px;
+  }
+  .for-img-history{
+    width: 140px;
+    height: 120px;
   }
  }
 
@@ -1071,6 +1135,31 @@ display: none;
     width: 150px;
     height: 40px;
     font-size: 12px;
+  }
+  .for-medium-history-text{
+    padding-left: 50px;
+    font-size: 12px;
+  }
+  .for-img-history{
+    width: 150px;
+    height: 125px;
+  }
+  .width-img-history{
+    width: 150px;
+  }
+  .bg-brown-size{
+    width: 500px;
+    height: 50px;
+    border-radius: 10px;
+  }
+  .cover-filter{
+    border: 1px solid;
+    width: 157px;
+    height: 45px;
+    text-align: center;
+  }
+  .arrow-filter{
+    padding-left: 30px;
   }
  }
 
